Codebase clean up